<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <!-- Profile Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCloseDrawer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_reject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/img_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- User Name -->
        <TextView
            android:id="@+id/txt_user_name"
            style="@style/txt_font_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            tools:text="Akshay"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/ic_down_arrow"
            app:layout_constraintTop_toBottomOf="@+id/img_user" />

        <ImageButton
            android:id="@+id/ic_down_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_profile"
            android:src="@drawable/ic_down_arrow"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/img_user" />


        <LinearLayout
            android:id="@+id/linOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/ic_down_arrow">


            <LinearLayout
                android:id="@+id/profileRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Profile Image Placeholder -->
                <ImageView
                    android:id="@+id/profileImagePlaceholder"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@drawable/ic_user"
                    android:contentDescription="@string/profile_avatar"
                    app:tint="@color/white" />

                <!-- Profile TextView -->
                <TextView
                    android:id="@+id/profileTextView"
                    style="@style/txt_font_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Profile"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/editProfileRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"

                app:layout_constraintTop_toBottomOf="@+id/profileRow">


                <ImageView
                    android:id="@+id/editProfileImagePlaceholder"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@drawable/ic_user"
                    android:contentDescription="TODO"
                    app:tint="@color/white" />


                <TextView
                    android:id="@+id/editProfileTextView"
                    style="@style/txt_font_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Change Password"
                    android:textSize="13sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/logoutRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/editProfileRow">

                <ImageView
                    android:id="@+id/logoutImagePlaceholder"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@drawable/ic_user"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/signOut"
                    style="@style/txt_font_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/logout"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:background="@color/white" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>